Fix "dummy" recipes for the bottling machine (such as filling buckets) not being synched to the client properly